--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <html>
   <head>
     <title>CurryCrash</title>
+    
+    <style>
+      .center{
+        margin: auto;
+        width: 60%;
+        border: 3px solid #000000;
+        padding: 10px;
+      }
+    </style>
   </head>
 
   <body>
      <div class="center">
-      <h1>Welcome To My Site!</h1>
+      <h1>GET READY TO CRASH</h1>
      </div>
   </body>
 </html>
