--- a/index.html
+++ b/index.html
@@ -2,14 +2,7 @@
   <head>
     <title>CurryCrash</title>
     
-    <style>
-      .center{
-        margin: auto;
-        width: 60%;
-        border: 3px solid #000000;
-        padding: 10px;
-      }
-    </style>
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
