--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>CurryCrash</title>
     
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="main.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
